dev: switch backuping on another database

--- a/project/ansible/templates/.pgpass.j2
+++ b/project/ansible/templates/.pgpass.j2
@@ -1,1 +1,2 @@
-{{ master_ip }}:5432:*:{{ barman_user }}:{{ barman_user_password }}
+10.10.1.131:5432:*:{{ barman_user }}:{{ barman_user_password }}
+10.10.1.132:5432:*:{{ barman_user }}:{{ barman_user_password }}
