--- a/project/ansible/templates/db.conf.j2
+++ b/project/ansible/templates/db.conf.j2
@@ -1,25 +1,17 @@
-[{{ ansible_host }}]
-description = "backup database from {{ ansible_host }} host"
+[{{ db_hostname }}]
+description = "backup database from {{ db_hostname }} host"
 active = {{ active }}
 ssh_command = ssh postgres@{{ db_ip }}
-
-# --- Команда для подключения к postgres-серверу
 conninfo = host={{ db_ip }} user={{ barman_user }} port=5432 dbname=postgres
 retention_policy_mode = auto
 retention_policy = RECOVERY WINDOW OF 7 days
 wal_retention_policy = main
 streaming_archiver=on
-
-# --- Указание префикса, который будет использоваться как $PATH на хосте master
 path_prefix = /usr/pgsql-14/bin/
-
-# --- Настройки слота
+# --- slot config
 create_slot = auto
-slot_name = master
-
-# --- Команда для потоковой передачи от postgres-сервера
+slot_name = {{ db_hostname }}
+# ---
 streaming_conninfo = host={{ db_ip }} user={{ barman_user }}
-
-# --- Тип выполняемого бекапа
 backup_method = postgres
 archiver = off
